# quickfast

./: .gitignore  .hgignore  BmfBovespa.md  ChangeLog  CmeFixFast.md  CustomMessages.md  EbsLive.md  EnglishOnlyDiscussion.md  ErrorMessages.md  Exchanges.md  FAQ.md  FastFieldRules.md  GettingStarted.md  IseOptimise.md  Jse.md  License.md  LinuxInstallationScript.md  LseMellenium.md  MicexRts.md  News.md  NyseArcaBook.md  NyseLiffe.md  PerformancePage.md  ProjectHome.md  QuickFAST.features  QuickFAST.mwc  QuickFASTApplication.mpb  QuickFASTArca.mpb  QuickFASTArcaApplication.mpb  QuickFASTDotNetApplication.mpb  QuickFASTDotNetExample.mpb  QuickFASTExample.mpb  QuickFASTExeOut.mpb  QuickFastDotNetTests.nunit  README.md  ReleaseNotes.md  SwXess.md  TutorialApplication.md  ValueMessageBuilder.md  license.txt  (+5 more)
src/: CMakeLists.txt  Doxyfile  QuickFAST.mpc
src/Application/: CommandArgHandler.h  CommandArgParser.cpp  CommandArgParser.h  DNDecoderConnectionImpl.cpp  DNDecoderConnectionImpl.h  DNDecoderConnectionImpl_fwd.h  DecoderConfiguration.h  DecoderConfiguration_fwd.h  DecoderConnection.cpp  DecoderConnection.h  DecoderConnection_fwd.h  FastConnection.cpp  FastConnection.h  QuickFAST.h
src/Arca/: ArcaMessageBuilder.cpp  ArcaMessageBuilder.h  ArcaMessageBuilder_fwd.h  ArcaMessageHandler.h  ArcaMessageStructure.h  QuickFASTArca.mpc  QuickFASTArca_Export.h  QuickFASTArca_pch.cpp  QuickFASTArca_pch.h
src/Codecs/: BasePacketAssembler.cpp  BasePacketAssembler.h  BasePacketAssembler_fwd.h  BlockedStreamQueueService.cpp  BlockedStreamQueueService.h  BufferConsumer.h  BufferConsumer_fwd.h  BufferDecoder.h  Context.cpp  Context.h  Context_fwd.h  DataDestination.h  DataDestinationBuffer.cpp  DataDestinationBuffer.h  DataDestinationString.cpp  DataDestinationString.h  DataDestination_fwd.h  DataSource.cpp  DataSource.h  DataSourceBlockedStream.cpp  DataSourceBlockedStream.h  DataSourceBuffer.cpp  DataSourceBuffer.h  DataSourceBufferedBlockedStream.cpp  DataSourceBufferedBlockedStream.h  DataSourceBufferedStream.cpp  DataSourceBufferedStream.h  DataSourceStream.cpp  DataSourceStream.h  DataSourceString.cpp  DataSourceString.h  DataSource_fwd.h  DecodedFields.h  DecodedFields_fwd.h  Decoder.cpp  Decoder.h  Decoder_fwd.h  Dictionary.h  DictionaryIndexer.cpp  DictionaryIndexer.h  (+109 more)
src/Common/: AsioService.cpp  AsioService.h  AtomicCounter.h  AtomicOps.h  AtomicPointer.h  BitMap.cpp  BitMap.h  Bitmap.cpp  BufferConsumer.h  BufferConsumer_fwd.h  BufferGenerator.h  BufferGenerator_fwd.h  ByteSwapper.cpp  ByteSwapper.h  Constants.h  Decimal.cpp  Decimal.h  Decimal_fwd.h  Exceptions.h  LinkedBuffer.h  LinkedBuffer_fwd.h  Logger.h  Logger_fwd.h  MemoryCache.h  PCapReader.cpp  PCapReader.h  Profiler.cpp  Profiler.h  QuickFASTPch.cpp  QuickFASTPch.h  QuickFAST_Export.h  StringBuffer.h  Types.cpp  Types.h  Value.h  Value_fwd.h  Version.h  WorkingBuffer.cpp  WorkingBuffer.h  dllmain.cpp
src/Communication/: AsioService.cpp  AsioService.h  AsioService_fwd.h  Assembler.h  Assembler_fwd.h  AsynchFileReceiver.h  AsynchFileReceiver_fwd.h  AsynchFileSender.cpp  AsynchFileSender.h  AsynchFileSender_fwd.h  AsynchReceiver.h  AsynchReceiver_fwd.h  AsynchSender.cpp  AsynchSender.h  AsynchSender_fwd.h  AtomicQueue.h  AtomicQueue_fwd.h  BufferConsumer.h  BufferConsumer_fwd.h  BufferGenerator.h  BufferGenerator_fwd.h  BufferQueue.h  BufferQueueService.h  BufferQueueService_fwd.h  BufferQueue_fwd.h  BufferReceiver.h  BufferReceiver_fwd.h  BufferRecycler.h  BufferedRawFileReceiver.h  BufferedRawFileReceiver_fwd.h  FileSender.cpp  FileSender.h  FileSender_fwd.h  LinkedBuffer.h  LinkedBuffer_fwd.h  MulticastReceiver.h  MulticastReceiverHandle.cpp  MulticastReceiverHandle.h  MulticastReceiver_fwd.h  MulticastSender.h  (+19 more)
src/DotNet/: AssemblyInfo.cpp  BoostPtr.h  DNDecimal.cpp  DNDecimal.h  DNDecoderConnection.cpp  DNDecoderConnection.h  DNField.cpp  DNField.h  DNFieldSet.cpp  DNFieldSet.h  DNMessage.h  DNMessageBuilder.h  DNMessageDeliverer.cpp  DNMessageDeliverer.h  DNSequence.cpp  DNSequence.h  DNSequenceEntry.h  DataDestination.cpp  DataDestination.h  DataSource.cpp  (+56 more)
(+311 files in other folders)
